# facial-sentiment-analysis-api

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  app.py  mvp.py  pyproject.toml
models/model1/: emotiondetector.json
models/model3/: model3.json
routes/: video_routes.py
schemas/: emotion_schema.py
services/data/: firebase_imp.py  firebase_service.py
services/emotion_analysis/: emotion_analysis_imp.py  emotion_analysis_service.py
utils/: record_face.py  utils.py
